--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -38,7 +39,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^7.1.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.4.17"
   }
 }
